# insight-audio

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/api/: router.py
app/api/endpoints/: analysis.py  health.py
app/services/: audio_acquirer.py  clap_embedder.py  emotional_complexity.py  librosa_extractor.py  panns_classifier.py  supabase_client.py
app/workers/: queue_worker.py
tests/: test_analysis.py  test_clap_embedder.py  test_config.py  test_emotional_complexity.py  test_health.py  test_librosa_extractor.py  test_panns_classifier.py  test_queue_worker.py  test_schemas.py
